Sprites Added
    PuppetKnight
    HangedMen
    GreyGoo
    PlantImposter
    TheGrumbled
    DireGreyhide
Bug: Monster not capitlized in champion tutorial
Bug: Cure colouring in event description is wrong
Bug: Make the item selection thing not swap if the active character has empty slot
Bug: Slight-flicker on already open tabs 
Bug: Fran string bad for time keeper ("no one else would send)

COOKING
-------
Bug: Two 4 line notifications on the right squish the lower's text slightly
Bug: Make stat threshold text last longer
Info: Make combat initial prompt last a little longer
Bug: Arrow not disappearing if info tab is not clicked on final part of tutorial
Balance: Make Stat altering buffs and debuffs always do 1 point of change minimum
Balance: Make bite have a 50% chance to inflict break
Fix: Make useCandles tutorial appear for the first character than can use candles
Bug: Animation cutting bug (where monsters end on the last frame of their animation)
Bug: Frost Golem skills should have unique message "Summons don't get skills"
Bug: Empty tooltip bug
Bug: Mage and Archer class select buttons can visually be seen de-whitening when swapping between main menu and class select (BUT NOT WARRIOR OR ROGUE?)
CRITICAL BUG: Going fullscreen causes buttons to offset (this might be a unity bug but need to try)
UI: Make eventDescription show physical/magical damage
UI: Might need to redo all attack animations cause pixel sizing is janky (64x64 to 96x96)
UI: Make clicking anoter party member in combat show their attacks (but obv they can't do anything)
UI: Make stat check toast last 1 second longer
UI: Hot key item tabs
Options: Bloom option (eughhh)
UI: Add a shader to show champion
UI: Turn reticle and name red if monster is higher level

Monster: Goo (PDEF 1 MDEF 1) (Random, but won't use metabolize if at full health)
    - Body Rush (physical attack, 50% chance to inflict break)
    - Metabolize (Heal and gain Cure for 3 turns) [normal mode only]